# legilens

./: .gitignore  .pylintrc  CLAUDE.md  Procfile  README.md  railway.toml
backend/: .env.example  Procfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_dataset_hashes.py  003_add_worker_state.py  004_minhash_signature_unique.py  005_text_fetch_columns.py  006_worker_state_value.py
backend/app/: config.py  database.py  dependencies.py  logging_filters.py  main.py
backend/app/models/: bill.py  dataset_hash.py  friction_tag.py  ist_score.py  minhash_signature.py  similarity_match.py  worker_state.py
backend/app/routers/: bills.py  coverage.py  matches.py  stats.py  tags.py
backend/app/schemas/: bill.py  coverage.py  match.py  stats.py
backend/app/services/: coverage.py  legiscan.py  minhash.py  redis_cache.py  snippet_extractor.py  text_extraction.py
backend/tests/: test_api_bills.py  test_api_coverage.py  test_api_matches.py  test_api_sessions.py  test_api_stats.py  test_cors.py  test_coverage_service.py  test_coverage_snapshot.py  test_dependencies.py  test_evidence.py  test_ingest.py  test_legiscan.py  test_logging_filters.py  test_match.py  test_migration_005.py  test_minhash.py  test_models_import.py  test_redis_cache.py  test_scheduler.py  test_schemas_import.py  test_snippet_extractor.py  test_text_extraction.py
backend/tests/worker/: __init__.py  test_fetch_bill_texts.py  test_fetch_bill_texts_burst.py  test_queue.py  (+1 more)
backend/worker/: queue.py  quota.py  scheduler.py
(+86 files in other folders)
